--- a/artBookProject/Base.lproj/Main.storyboard
+++ b/artBookProject/Base.lproj/Main.storyboard
@@ -1,24 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yEP-Hs-8ru">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="artBookProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RBL-kO-ZMm">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RBL-kO-ZMm" secondAttribute="trailing" id="3oP-Es-Kdy"/>
+                            <constraint firstItem="RBL-kO-ZMm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Sl1-Ai-srb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RBL-kO-ZMm" secondAttribute="bottom" id="g30-j5-z5i"/>
+                            <constraint firstItem="RBL-kO-ZMm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iVR-KT-izv"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="v0X-iF-GMf"/>
+                    <connections>
+                        <outlet property="tableView" destination="RBL-kO-ZMm" id="7oi-pa-U4b"/>
+                        <segue destination="5hV-a0-qxg" kind="show" identifier="toDetailsVC" id="g0B-qF-TUr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1040.4580152671756" y="-27.464788732394368"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="tGE-gv-oob">
+            <objects>
+                <viewController id="5hV-a0-qxg" customClass="DetailsVC" customModule="artBookProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fBv-Vk-cJg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zgc-c8-evZ">
+                                <rect key="frame" x="76" y="138" width="241" height="311"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="311" id="g8P-Qw-NMJ"/>
+                                    <constraint firstAttribute="width" constant="241" id="ozc-ia-WIS"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c9X-jI-F1F">
+                                <rect key="frame" x="76" y="498" width="241" height="34"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Z3V-hD-Z7t"/>
+                                    <constraint firstAttribute="width" constant="241" id="lxH-gW-eQy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Artist" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z8m-eP-KVv">
+                                <rect key="frame" x="76" y="572" width="241" height="34"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Uya-4C-eS6"/>
+                                    <constraint firstAttribute="width" constant="241" id="X8p-dF-frm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X3A-qh-Rke">
+                                <rect key="frame" x="76" y="646" width="241" height="34"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="241" id="JsV-3c-SJl"/>
+                                    <constraint firstAttribute="height" constant="34" id="YAU-j2-hTJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XqH-ls-A06">
+                                <rect key="frame" x="131" y="707" width="131" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="2Hk-EP-p0A"/>
+                                    <constraint firstAttribute="height" constant="43" id="mH3-fC-XaF"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Save">
+                                    <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                    <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="saveButtonTik:" destination="5hV-a0-qxg" eventType="touchUpInside" id="gqC-y5-Do6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Mo6-AG-9e7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="X3A-qh-Rke" firstAttribute="centerX" secondItem="XqH-ls-A06" secondAttribute="centerX" id="2ZU-VB-53q"/>
+                            <constraint firstItem="Zgc-c8-evZ" firstAttribute="top" secondItem="Mo6-AG-9e7" secondAttribute="top" constant="35" id="9Hn-wJ-YUA"/>
+                            <constraint firstItem="X3A-qh-Rke" firstAttribute="top" secondItem="z8m-eP-KVv" secondAttribute="bottom" constant="40" id="Ft5-Z6-Pcy"/>
+                            <constraint firstItem="z8m-eP-KVv" firstAttribute="top" secondItem="c9X-jI-F1F" secondAttribute="bottom" constant="40" id="HKn-SY-1VO"/>
+                            <constraint firstItem="c9X-jI-F1F" firstAttribute="leading" secondItem="z8m-eP-KVv" secondAttribute="leading" id="hFk-YL-FbU"/>
+                            <constraint firstItem="c9X-jI-F1F" firstAttribute="top" secondItem="Zgc-c8-evZ" secondAttribute="bottom" constant="49" id="iVK-dR-oEq"/>
+                            <constraint firstItem="Zgc-c8-evZ" firstAttribute="centerX" secondItem="fBv-Vk-cJg" secondAttribute="centerX" id="kE1-6Z-xKy"/>
+                            <constraint firstItem="Zgc-c8-evZ" firstAttribute="leading" secondItem="c9X-jI-F1F" secondAttribute="leading" id="m0O-Py-maW"/>
+                            <constraint firstItem="XqH-ls-A06" firstAttribute="top" secondItem="X3A-qh-Rke" secondAttribute="bottom" constant="27" id="xnd-Cv-wtq"/>
+                            <constraint firstItem="z8m-eP-KVv" firstAttribute="leading" secondItem="X3A-qh-Rke" secondAttribute="leading" id="y9S-Nw-oEO"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="5rG-F8-ZP6"/>
+                    <connections>
+                        <outlet property="artistText" destination="z8m-eP-KVv" id="I0r-8Z-sTg"/>
+                        <outlet property="imageView" destination="Zgc-c8-evZ" id="Laq-pG-Wis"/>
+                        <outlet property="nameText" destination="c9X-jI-F1F" id="BX8-cL-mh0"/>
+                        <outlet property="yearText" destination="X3A-qh-Rke" id="Xgh-Ma-nSF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DNx-7P-cP7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1893.8931297709923" y="-27.464788732394368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2cE-bd-BgQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yEP-Hs-8ru" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Txj-c1-0Gc">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ryy-OE-eKs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rs0-0h-ThV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="113.74045801526717" y="-27.464788732394368"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
